src/frontend/styles/components/writing.pcss
.writing-header {
  padding: 15px 0;
  margin-top: calc(-1 * var(--layout-padding-vertical));
  background: #fff;
  box-shadow: 0 3px 10px #fff;
  z-index: 2;
  font-size: 14px;

  &__save {
    @apply --button;
    @apply --button-primary;
    margin: auto;
  }

  &__inner-container {
    margin: auto 0;
    display: flex;
    color: var(--color-text-second);
    gap: 10px;

    @media(--mobile) {
      flex-flow: column;
    }

    & > * {
      flex: 0 1 33.3%;
    }

    label {
      display: block;
      margin-bottom: 6px;
    }

    select {
      @apply --select;
    }

    input {
      @apply --input;
    }
  }
}

.writing-buttons {
  display: flex;

  button:not(:last-child) {
    margin-right: 20px;
  }
}

.writing-editor {
  @apply --text-content-main;

  .ce-code__textarea {
    @apply --text-code-block;

    border: 0;
    border-radius: 8px;
  }

  .ce-paragraph a {
    @apply --text-inline-link;
  }

  .ce-header {
    @apply --text-header;
    padding: 0;
  }

  h2.ce-header {
    @apply --text-header-2;
  }

  h3.ce-header {
    @apply --text-header-3;
  }

  .cdx-block {
    padding: 0;
  }

  .inline-code {
    @apply  --text-inline-code;
  }

  .tc-table {
    @apply --text-content-main;
  }

  .tc-cell {
    padding: 6px 8px;
  }
}

.codex-editor__redactor .ce-block:first-of-type .ce-header {
  @apply --text-content-title;
}


.ce-block {
  @apply --content-block;
}

